spacing issues on events

--- a/styles/main.css
+++ b/styles/main.css
@@ -354,3 +354,7 @@ body {
 .module {
   padding-bottom: 15px;
 }
+
+#events {
+  padding-bottom: 60px;
+}
